--- a/src/components/Statistics/Statistics.module.css
+++ b/src/components/Statistics/Statistics.module.css
@@ -1,12 +1,34 @@
 .statistics {
+  width: 300px;
+  background: white;
+  border-radius: 8px;
+  box-shadow: 3px 5px 9px 0px #dadada;
+  overflow: hidden;
 }
 .title {
+  font-size: 20px;
+  padding: 30px 20px;
+  text-align: center;
 }
-.stat-list {
+.statList {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  align-content: center;
+  justify-content: space-around;
+  align-items: center;
 }
 .item {
+  width: calc(100% / 5);
+  padding: 15px 5px;
 }
 .label {
+  display: block;
+  width: 100%;
+  font-size: 16px;
 }
 .percentage {
+  display: block;
+  margin-top: 5px;
+  font-size: 20px;
 }
