--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 @import-normalize; /* bring in normalize.css styles */
+@import 'reset.css'; /* bring in custom reset styles */
 
 body {
   margin: 0;
@@ -7,6 +8,12 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  text-align: center;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1.2;
+  background: #f0f0f0;
 }
 
 code {
